avoid cutting off names in paginated list

--- a/src/routes/cms/components/PaginatedList/style.scss
+++ b/src/routes/cms/components/PaginatedList/style.scss
@@ -11,7 +11,6 @@
 }
 
 .paginated-list-item-name {
-  overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
   max-width: 33vw;
